# rs-tfhe

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  crates.js  help.html  search-index.js  settings.html  src-files.js
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  dependabot.yml  matrix.yml  publish.yml  quality.yml
benches/: gate_benchmarks.rs
examples/: add_two_numbers.rs  batch_gates.rs  batch_gates_scaling.rs  bootstrap_between_reenc.rs  bootstrap_strategies.rs  custom_railgun.rs  fft_diagnostics.rs  fft_sizes.rs  gates_with_strategies.rs  lut_add_two_numbers.rs  lut_arithmetic_demo.rs  lut_bootstrapping.rs  lut_bootstrapping_simple.rs  lut_uint_parameters_demo.rs  proxy_reenc_with_bootstrap.rs  proxy_reencryption_demo.rs  security_levels.rs  test_keygen_speed.rs
rs_tfhe/: all.html  index.html  sidebar-items.js
rs_tfhe/bit_utils/: fn.convert.html  fn.to_bits.html  index.html  sidebar-items.js  trait.AsBits.html
rs_tfhe/bootstrap/: fn.default_bootstrap.html  index.html  sidebar-items.js  trait.Bootstrap.html
rs_tfhe/fft/: constant.FFT_PLAN.html  index.html  sidebar-items.js  struct.FFTPlan.html  trait.FFTProcessor.html  type.DefaultFFTProcessor.html
rs_tfhe/gates/: fn.and.html  fn.and_ny.html  fn.and_yn.html  fn.batch_and.html  fn.batch_and_with_railgun.html  fn.batch_nand.html  fn.batch_nand_with_railgun.html  fn.batch_nor.html  fn.batch_nor_with_railgun.html  fn.batch_or.html  fn.batch_or_with_railgun.html  fn.batch_xnor.html  fn.batch_xnor_with_railgun.html  fn.batch_xor.html  fn.batch_xor_with_railgun.html  fn.constant.html  fn.copy.html  fn.mux.html  fn.mux_naive.html  fn.nand.html  fn.nor.html  fn.not.html  fn.or.html  fn.or_ny.html  fn.or_yn.html  fn.xnor.html  fn.xor.html  index.html  sidebar-items.js  struct.Gates.html
rs_tfhe/key/: fn.gen_bootstrapping_key.html  fn.gen_bootstrapping_key_with_railgun.html  fn.gen_decomposition_offset.html  fn.gen_key_switching_key.html  fn.gen_testvec.html  index.html  sidebar-items.js  struct.CloudKey.html  struct.SecretKey.html  type.BootstrappingKey.html  type.KeySwitchingKey.html  type.SecretKeyLv0.html  type.SecretKeyLv1.html
rs_tfhe/lut/: index.html  sidebar-items.js
rs_tfhe/parallel/: fn.default_railgun.html  fn.rayon_railgun.html  index.html  sidebar-items.js  struct.ParallelConfig.html  trait.Railgun.html
rs_tfhe/params/: constant.BSK_ALPHA.html  (+25 more)
search.index/: 09528a625537.js  111f5d3160f9.js  11472704e0af.js  159254fc7d6a.js  1ad77a7a002b.js  253f87ed29be.js  25de20991905.js  2677d53e2ff3.js  3327fb3410e6.js  353da4519406.js  3a9dd8762d2f.js  3b02af2c46ba.js  3f59aed2fd6e.js  4026c67d6225.js  42e6a2117aaa.js  4319371801c6.js  4413e50a6717.js  46f5c08d7b50.js  4a945e376af5.js  4e7137b26c82.js  4fab2b54df72.js  5215948435c4.js  54e08e9c6bff.js  55a933c5567a.js  5892cd73ea32.js  5a3e3ff47fce.js  5cce9d2fea75.js  6170d8f6b228.js  668e19d38862.js  671d39c6369b.js  685df04941ee.js  6aa61cc3b9b9.js  6b2b67835590.js  732e6d46d3cc.js  7c0cfb94f81a.js  7eb4ac8ef7c3.js  root.js
src/: bit_utils.rs  circuits.rs  context.rs  gates.rs  key.rs  lib.rs  main.rs  mulfft.rs  mulfft_rs_fft.rs  params.rs  proxy_reenc.rs  spqlios.rs  tlwe.rs  trgsw.rs  trlwe.rs  utils.rs
(+150 files in other folders)
