[package]
name = "rs_tfhe"
version = "0.1.0"
authors = ["Jay Logelin <jay.logelin@gmail.com>", "Naoki Matsumoto <m.naoki9911@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.3.0"
rustfft = "6.1.0"
realfft = "3.3.0"
rayon = "1.10"
tfhe-fft = "0.9.0"
dyn-stack = "=0.11.0"
pulp = "0.18"
aligned-vec = "0.6"

[build-dependencies]
cc = "1.0.65"

[dev-dependencies]
core_extensions = "^1.5"
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = "1.16"

[[bench]]
name = "gate_benchmarks"
harness = false

[features]
# Security levels (mutually exclusive - 128-bit is default)
security-80bit = []
security-110bit = []
security-128bit = []  # Not needed (default), but explicit for clarity

# FFT implementations
bootstrapping = []
fft_avx = []
fft_fma = []

default = ["bootstrapping", "fft_fma"]
