[package]
name = "rs_tfhe"
version = "0.1.0"
authors = ["Jay Logelin <jay.logelin@gmail.com>", "Naoki Matsumoto <m.naoki9911@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.5.1"
rustfft = "6.1.0"
realfft = "3.3.0"
rayon = "1.10"
dyn-stack = "=0.11.0"
pulp = "0.18"
aligned-vec = "0.6"
once_cell = "1.21.3"

[build-dependencies]
cc = "1.0.65"

[dev-dependencies]
core_extensions = "^1.5"
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = "1.16"

[[bench]]
name = "gate_benchmarks"
harness = false

[features]
# FFT implementations
bootstrapping = []
fft_avx = []
fft_fma = []

# LUT bootstrapping - programmable bootstrapping with lookup tables
lut-bootstrap = []

default = ["bootstrapping", "fft_fma"]
