[package]
name = "rs_tfhe"
version = "0.2.0"
authors = ["lodge <jay.logelin@gmail.com>", "Naoki Matsumoto <m.naoki9911@gmail.com>"]
edition = "2021"
description = "A high-performance Rust implementation of TFHE (Torus Fully Homomorphic Encryption) with advanced programmable bootstrapping capabilities"
license-file = "LICENSE"
repository = "https://github.com/thedonutfactory/rs-tfhe"
homepage = "https://github.com/thedonutfactory/rs-tfhe"
documentation = "https://docs.rs/rs_tfhe"
readme = "README.md"
keywords = ["homomorphic", "tfhe", "cryptography", "privacy", "fhe"]
categories = ["cryptography", "algorithms"]
rust-version = "1.90.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_distr = "0.3.0"
rustfft = "6.1.0"
realfft = "3.3.0"
rayon = "1.10"
dyn-stack = "=0.13.2"
pulp = "0.18"
aligned-vec = "0.6"
once_cell = "1.21.3"

[build-dependencies]
cc = "1.0.65"

[dev-dependencies]
core_extensions = "^1.5"
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = "1.16"

[[bench]]
name = "gate_benchmarks"
harness = false

[features]
# FFT implementations
bootstrapping = []
fft_avx = []
fft_fma = []

# LUT bootstrapping - programmable bootstrapping with lookup tables
lut-bootstrap = []

# Proxy reencryption - convert ciphertexts between different keys
proxy-reenc = []

default = ["bootstrapping", "fft_fma"]
